mdapipkg/objects/Interest__c.object
<CustomObject>
    <fields>
        <fullName>Leadership__c</fullName>
        <label>Leadership</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Community Leadership</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Executive Leadership</fullName>
                </value>
                <value>
                    <fullName>Family Leadership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MultiSelectPicklists_Text__c</fullName>
        <label>MultiSelectPicklists(Text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_3__c</fullName>
        <label>Other 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_4__c</fullName>
        <label>Other 4</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_5__c</fullName>
        <label>Other 5</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Languages__c</fullName>
        <label>Other Languages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abkhazian</fullName>
                </value>
                <value>
                    <fullName>Afar</fullName>
                </value>
                <value>
                    <fullName>Afrikaans</fullName>
                </value>
                <value>
                    <fullName>Albanian</fullName>
                </value>
                <value>
                    <fullName>Amharic</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Armenian</fullName>
                </value>
                <value>
                    <fullName>Assamese</fullName>
                </value>
                <value>
                    <fullName>Aymara</fullName>
                </value>
                <value>
                    <fullName>Azerbaijani</fullName>
                </value>
                <value>
                    <fullName>Bashkir</fullName>
                </value>
                <value>
                    <fullName>Basque</fullName>
                </value>
                <value>
                    <fullName>Bengali, Bangla</fullName>
                </value>
                <value>
                    <fullName>Bhutani</fullName>
                </value>
                <value>
                    <fullName>Bihari</fullName>
                </value>
                <value>
                    <fullName>Bislama</fullName>
                </value>
                <value>
                    <fullName>Breton</fullName>
                </value>
                <value>
                    <fullName>Bulgarian</fullName>
                </value>
                <value>
                    <fullName>Burmese</fullName>
                </value>
                <value>
                    <fullName>Byelorussian</fullName>
                </value>
                <value>
                    <fullName>Cambodian</fullName>
                </value>
                <value>
                    <fullName>Catalan</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Corsican</fullName>
                </value>
                <value>
                    <fullName>Croatian</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English, American</fullName>
                </value>
                <value>
                    <fullName>Esperanto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Interest</fullName>
                </value>
                <value>
                    <fullName>Skill or Expertise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Validation_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validation Check</label>
        <type>Checkbox</type>
    </fields>
    <label>Interest</label>
    <listViews>
        <fullName>InterestsAll</fullName>
        <columns>Contact__c</columns>
        <columns>NAME</columns>
        <columns>Category_Text__c</columns>
        <columns>Interest__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Interest</value>
        </filters>
        <label>Interests - All</label>
    </listViews>
    <listViews>
        <fullName>SkillsExpertiseAll</fullName>
        <columns>Contact__c</columns>
        <columns>NAME</columns>
        <columns>Category_Text__c</columns>
        <columns>Interest__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Skill or Expertise</value>
        </filters>
        <label>Skills &amp; Expertise - All</label>
    </listViews>
    <nameField>
        <displayFormat>INT-{0000}</displayFormat>
        <label>Interest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>